--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>TITULO</title>
+	<title>Portfolio</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -74,11 +74,11 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h1>I'm Coryl Bolares</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>UI/UX Designer</span> 
+	   				<span>UC Student</span>
+	   				<span>Enterprise Resource Planning</span> 
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -129,23 +129,23 @@
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<span>Coryl Kain Bolares</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
+   					<span>June 12 2004</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
+   					<span>None: Student</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>None</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>None</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -248,8 +248,8 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>College Student</h3>
+	   					<p></p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -265,10 +265,7 @@
 	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
-	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
-	   				</div>
+	   				
 
 	   				<div class="timeline-content">
 	   					<h4>Great Designs Studio</h4>
@@ -302,8 +299,8 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>College Degree</h3>
+	   					<p>July 2022 - Now</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -321,7 +318,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<p>None Yet</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -367,6 +364,12 @@
 
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Works.</h1>
+			<li><a href="C:\Users\hp\CorylBolares.github.io\Finals\Product Landing Page\index.html"></a></li>
+			<li><a href="Finals/Product Landing Page/TechDoc/index.html"></a></li>
+			<li><a href="Finals/Product Landing/Tribute Page/index.html"></a></li>
+
+
+
 
    			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
 
